refactor(links): Comment out external link

--- a/apps/web/src/app/admin-console/organizations/manage/user-confirm.component.html
+++ b/apps/web/src/app/admin-console/organizations/manage/user-confirm.component.html
@@ -5,7 +5,8 @@
       <span class="tw-text-muted" bitTypography="body1">{{ name }}</span>
     </span>
     <ng-container bitDialogContent>
-      <p bitTypography="body1">
+      <!-- temp-comment: p26 -->
+      <!-- <p bitTypography="body1">
         {{ "fingerprintEnsureIntegrityVerify" | i18n }}
         <a
           bitLink
@@ -15,7 +16,7 @@
         >
           {{ "learnMore" | i18n }}</a
         >
-      </p>
+      </p> -->
       <p bitTypography="body1">
         <code>{{ fingerprint }}</code>
       </p>
