--- a/apps/web/src/app/admin-console/organizations/members/components/bulk/bulk-confirm.component.html
+++ b/apps/web/src/app/admin-console/organizations/members/components/bulk/bulk-confirm.component.html
@@ -7,7 +7,8 @@
       {{ error }}
     </bit-callout>
     <ng-container *ngIf="!loading && !done">
-      <p bitTypography="body1">
+      <!-- temp-comment: p26 -->
+      <!-- <p bitTypography="body1">
         {{ "fingerprintEnsureIntegrityVerify" | i18n }}
         <a
           bitLink
@@ -17,7 +18,7 @@
         >
           {{ "learnMore" | i18n }}</a
         >
-      </p>
+      </p> -->
       <bit-table>
         <ng-container header>
           <tr>
