--- a/apps/web/src/app/auth/recover-two-factor.component.html
+++ b/apps/web/src/app/auth/recover-two-factor.component.html
@@ -1,5 +1,6 @@
 <form [formGroup]="formGroup" [bitSubmit]="submit">
-  <p bitTypography="body1">
+  <!-- temp-comment: p26 -->
+  <!-- <p bitTypography="body1">
     {{ "recoverAccountTwoStepDesc" | i18n }}
     <a
       bitLink
@@ -8,7 +9,7 @@
       rel="noreferrer"
       >{{ "learnMore" | i18n }}</a
     >
-  </p>
+  </p> -->
   <bit-form-field>
     <bit-label>{{ "emailAddress" | i18n }}</bit-label>
     <input
