--- a/apps/web/src/app/auth/register-form/register-form.component.html
+++ b/apps/web/src/app/auth/register-form/register-form.component.html
@@ -113,7 +113,8 @@
         formControlName="acceptPolicies"
       />
 
-      <bit-label for="register-form-input-accept-policies">
+      <!-- temp-comment: p26 -->
+      <!-- <bit-label for="register-form-input-accept-policies">
         {{ "acceptPolicies" | i18n }}<br />
         <a href="https://bitwarden.com/terms/" target="_blank" rel="noreferrer">{{
           "termsOfService" | i18n
@@ -122,7 +123,7 @@
         <a href="https://bitwarden.com/privacy/" target="_blank" rel="noreferrer">{{
           "privacyPolicy" | i18n
         }}</a>
-      </bit-label>
+      </bit-label> -->
     </div>
 
     <div class="tw-space-x-2 tw-pt-2">
