--- a/apps/web/src/app/auth/settings/emergency-access/confirm/emergency-access-confirm.component.html
+++ b/apps/web/src/app/auth/settings/emergency-access/confirm/emergency-access-confirm.component.html
@@ -5,7 +5,7 @@
       <small class="tw-text-muted">{{ params.name }}</small>
     </span>
     <div bitDialogContent>
-      <p bitTypography="body1">
+      <!-- <p bitTypography="body1">
         {{ "fingerprintEnsureIntegrityVerify" | i18n }}
         <a
           bitLink
@@ -15,7 +15,7 @@
         >
           {{ "learnMore" | i18n }}</a
         >
-      </p>
+      </p> -->
       <p bitTypography="body1">
         <code>{{ fingerprint }}</code>
       </p>
