--- a/apps/web/src/app/auth/settings/emergency-access/emergency-access.component.html
+++ b/apps/web/src/app/auth/settings/emergency-access/emergency-access.component.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
 <bit-container>
-  <bit-section>
+  <!-- temp-comment: p26 -->
+  <!-- <bit-section>
     <p bitTypography="body1">
       <span class="tw-text-main">{{ "emergencyAccessDesc" | i18n }}</span>
       <a
@@ -15,7 +16,7 @@
     <bit-callout *ngIf="isOrganizationOwner" type="warning" title="{{ 'warning' | i18n }}">{{
       "emergencyAccessOwnerWarning" | i18n
     }}</bit-callout>
-  </bit-section>
+  </bit-section> -->
   <bit-section>
     <div class="tw-flex tw-items-center tw-gap-2 tw-mb-2">
       <h2 bitTypography="h2" noMargin class="tw-mb-0">
