--- a/apps/web/src/app/auth/settings/two-factor-authenticator.component.html
+++ b/apps/web/src/app/auth/settings/two-factor-authenticator.component.html
@@ -31,18 +31,20 @@
             >2FAS</a
           >
           {{ "twoStepAuthenticatorInstructionInfix2" | i18n }}
-          <a
+          <!-- temp-comment: p26 -->
+          <!-- <a
             bitLink
             target="_blank"
             rel="noreferrer"
             (click)="launchBitwardenUrl('https://bitwarden.com/products/authenticator/')"
             >SaviVault Authenticator</a
           >
-          {{ "twoStepAuthenticatorInstructionSuffix" | i18n }}
+          {{ "twoStepAuthenticatorInstructionSuffix" | i18n }} -->
         </p>
 
         <p class="text-center">
-          <a
+          <!-- temp-comment: p26 -->
+          <!-- <a
             href="https://apps.apple.com/ca/app/bitwarden-authenticator/id6497335175"
             target="_blank"
           >
@@ -52,10 +54,11 @@
               max-width="120"
               height="40"
             />
-          </a>
+          </a> -->
 
           <!--Margin to ensure compliance with google play badge usage guidelines (https://partnermarketinghub.withgoogle.com/brands/google-play/visual-identity/badge-guidelines/#:~:text=The%20clear%20space%20surrounding%20the%20badge%20must%20be%20equal%20to%20one%2Dquarter%20of%20the%20height%20of%20the%20badge.)-->
-          <a
+          <!-- temp-comment: p26 -->
+          <!-- <a
             href="https://play.google.com/store/apps/details?id=com.bitwarden.authenticator"
             target="_blank"
           >
@@ -66,7 +69,7 @@
               height="40"
               style="margin-left: 10px"
             />
-          </a>
+          </a> -->
         </p>
         {{ "twoStepAuthenticatorScanCodeV2" | i18n }}
       </ng-container>
