--- a/apps/web/src/app/layouts/header/web-header.component.html
+++ b/apps/web/src/app/layouts/header/web-header.component.html
@@ -61,7 +61,8 @@
                 <i class="bwi bwi-fw bwi-user" aria-hidden="true"></i>
                 {{ "accountSettings" | i18n }}
               </a>
-              <a
+              <!-- temp-comment: p26 -->
+              <!-- <a
                 bitMenuItem
                 href="https://github.com/timshel/oidcwarden"
                 target="_blank"
@@ -78,7 +79,7 @@
               >
                 <i class="bwi bwi-fw bwi-download" aria-hidden="true"></i>
                 {{ "getApps" | i18n }}
-              </a>
+              </a> -->
 
               <bit-menu-divider></bit-menu-divider>
 
