--- a/apps/web/src/app/vault/individual-vault/add-edit-custom-fields.component.html
+++ b/apps/web/src/app/vault/individual-vault/add-edit-custom-fields.component.html
@@ -11,7 +11,8 @@
       <div class="col-5 form-group">
         <div class="d-flex">
           <label for="fieldName{{ i }}">{{ "name" | i18n }}</label>
-          <a
+          <!-- temp-comment: p26 -->
+          <!-- <a
             class="ml-auto"
             href="https://bitwarden.com/help/custom-fields/"
             target="_blank"
@@ -19,7 +20,7 @@
             appA11yTitle="{{ 'learnMore' | i18n }}"
           >
             <i class="bwi bwi-question-circle" aria-hidden="true"></i>
-          </a>
+          </a> -->
         </div>
         <input
           id="fieldName{{ i }}"
