--- a/apps/web/src/app/admin-console/organizations/members/components/member-dialog/member-dialog.component.html
+++ b/apps/web/src/app/admin-console/organizations/members/components/member-dialog/member-dialog.component.html
@@ -34,7 +34,8 @@
             </bit-form-field>
           </ng-container>
           <bit-radio-group formControlName="type">
-            <bit-label>
+            <!-- temp-comment: p26 -->
+            <!-- <bit-label>
               {{ "memberRole" | i18n }}
               <a
                 bitLink
@@ -46,7 +47,7 @@
               >
                 <i class="bwi bwi-question-circle" aria-hidden="true"></i>
               </a>
-            </bit-label>
+            </bit-label> -->
             <bit-radio-button id="userTypeUser" [value]="organizationUserType.User">
               <bit-label>{{ "user" | i18n }}</bit-label>
               <bit-hint>{{ "userDesc" | i18n }}</bit-hint>
@@ -67,7 +68,8 @@
               <bit-label>{{ "custom" | i18n }}</bit-label>
               <bit-hint>
                 <ng-container *ngIf="!organization.useCustomPermissions; else enterprise">
-                  <p>
+                  <!-- temp-comment: p26 -->
+                  <!-- <p>
                     {{ "customDescNonEnterpriseStart" | i18n
                     }}<a
                       bitLink
@@ -76,7 +78,7 @@
                       rel="noreferrer"
                       >{{ "customDescNonEnterpriseLink" | i18n }}</a
                     >{{ "customDescNonEnterpriseEnd" | i18n }}
-                  </p>
+                  </p> -->
                 </ng-container>
                 <ng-template #enterprise>
                   <p>{{ "customDesc" | i18n }}</p>
@@ -145,7 +147,8 @@
             </div>
           </ng-container>
           <ng-container *ngIf="organization.useSecretsManager">
-            <h3 class="tw-mt-4">
+            <!-- temp-comment: p26 -->
+            <!-- <h3 class="tw-mt-4">
               {{ "secretsManager" | i18n }}
               <a
                 bitLink
@@ -156,7 +159,7 @@
               >
                 <i class="bwi bwi-question-circle" aria-hidden="true"></i>
               </a>
-            </h3>
+            </h3> -->
             <p class="tw-text-muted">{{ "secretsManagerAccessDescription" | i18n }}</p>
             <bit-form-control>
               <input
