--- a/apps/web/src/app/admin-console/organizations/settings/account.component.html
+++ b/apps/web/src/app/admin-console/organizations/settings/account.component.html
@@ -36,12 +36,13 @@
   </form>
   <ng-container *ngIf="canUseApi">
     <h1 bitTypography="h1" class="tw-mt-16 tw-pb-2.5">{{ "apiKey" | i18n }}</h1>
-    <p bitTypography="body1">
+    <!-- temp-comment: p26 -->
+    <!-- <p bitTypography="body1">
       {{ "apiKeyDesc" | i18n }}
       <a bitLink href="https://docs.bitwarden.com" target="_blank" rel="noreferrer">
         {{ "learnMore" | i18n }}
       </a>
-    </p>
+    </p> -->
     <button type="button" bitButton buttonType="secondary" (click)="viewApiKey()">
       {{ "viewApiKey" | i18n }}
     </button>
