--- a/apps/web/src/app/auth/migrate-encryption/migrate-legacy-encryption.component.html
+++ b/apps/web/src/app/auth/migrate-encryption/migrate-legacy-encryption.component.html
@@ -5,7 +5,8 @@
       <div
         class="tw-block tw-rounded tw-border tw-border-solid tw-border-secondary-300 tw-bg-background tw-p-8"
       >
-        <p>
+        <!-- temp-comment: p26 -->
+        <!-- <p>
           {{ "updateEncryptionSchemeDesc" | i18n }}
           <a
             href="https://bitwarden.com/help/account-encryption-key/#rotate-your-encryption-key"
@@ -13,7 +14,7 @@
             rel="noreferrer"
             >{{ "learnMore" | i18n }}</a
           >
-        </p>
+        </p> -->
         <bit-callout type="warning">{{ "updateEncryptionKeyWarning" | i18n }}</bit-callout>
 
         <bit-form-field>
