--- a/apps/web/src/app/auth/settings/change-password.component.html
+++ b/apps/web/src/app/auth/settings/change-password.component.html
@@ -100,14 +100,15 @@
       <label class="form-check-label" for="rotateUserKey">
         {{ "rotateAccountEncKey" | i18n }}
       </label>
-      <a
+      <!-- temp-comment: p26 -->
+      <!-- <a
         href="https://bitwarden.com/help/account-encryption-key/#rotate-your-encryption-key"
         target="_blank"
         rel="noreferrer"
         appA11yTitle="{{ 'learnMore' | i18n }}"
       >
         <i class="bwi bwi-question-circle" aria-hidden="true"></i>
-      </a>
+      </a> -->
     </div>
   </div>
   <div class="form-group">
