--- a/apps/web/src/app/auth/settings/emergency-access/emergency-access-add-edit.component.html
+++ b/apps/web/src/app/auth/settings/emergency-access/emergency-access-add-edit.component.html
@@ -14,7 +14,8 @@
         </bit-form-field>
       </ng-container>
       <bit-radio-group formControlName="emergencyAccessType" [block]="true">
-        <bit-label>
+        <!-- temp-comment: p26 -->
+        <!-- <bit-label>
           {{ "userAccess" | i18n }}
           <a
             target="_blank"
@@ -27,7 +28,7 @@
           >
             <i class="bwi bwi-question-circle" aria-hidden="true"></i>
           </a>
-        </bit-label>
+        </bit-label> -->
         <bit-radio-button id="emergencyTypeView" [value]="emergencyAccessType.View">
           <bit-label>{{ "view" | i18n }}</bit-label>
           <bit-hint>{{ "viewDesc" | i18n }}</bit-hint>
