--- a/apps/web/src/app/auth/settings/security/change-kdf/change-kdf.component.html
+++ b/apps/web/src/app/auth/settings/security/change-kdf/change-kdf.component.html
@@ -13,7 +13,8 @@
   <div class="tw-grid tw-grid-cols-12 tw-gap-4">
     <div class="tw-col-span-6">
       <bit-form-field>
-        <bit-label
+        <!-- temp-comment: p26 -->
+        <!-- <bit-label
           >{{ "kdfAlgorithm" | i18n }}
           <a
             class="tw-ml-auto"
@@ -26,7 +27,7 @@
           >
             <i class="bwi bwi-question-circle" aria-hidden="true"></i>
           </a>
-        </bit-label>
+        </bit-label> -->
         <bit-select formControlName="kdf">
           <bit-option
             *ngFor="let option of kdfOptions"
@@ -49,7 +50,8 @@
     <div class="tw-col-span-6">
       <div class="tw-mb-0">
         <bit-form-field formGroupName="kdfConfig" *ngIf="isPBKDF2(kdfConfig)">
-          <bit-label>
+          <!-- temp-comment: p26 -->
+          <!-- <bit-label>
             {{ "kdfIterations" | i18n }}
             <a
               bitLink
@@ -62,7 +64,7 @@
             >
               <i class="bwi bwi-question-circle" aria-hidden="true"></i>
             </a>
-          </bit-label>
+          </bit-label> -->
           <input
             bitInput
             type="number"
