--- a/apps/web/src/app/billing/organizations/download-license.component.html
+++ b/apps/web/src/app/billing/organizations/download-license.component.html
@@ -5,7 +5,8 @@
       <div class="tw-grid tw-grid-cols-12 tw-gap-4">
         <div class="tw-col-span-8">
           <bit-form-field>
-            <bit-label
+            <!-- temp-comment: p26 -->
+            <!-- <bit-label
               >{{ "enterInstallationId" | i18n }}
               <a
                 bitLink
@@ -18,7 +19,7 @@
               >
                 <i class="bwi bwi-question-circle" aria-hidden="true"></i>
               </a>
-            </bit-label>
+            </bit-label> -->
             <input type="text" bitInput formControlName="installationId" />
           </bit-form-field>
         </div>
