--- a/apps/web/src/app/billing/organizations/organization-subscription-cloud.component.html
+++ b/apps/web/src/app/billing/organizations/organization-subscription-cloud.component.html
@@ -147,9 +147,10 @@
         {{ "smStandaloneTrialSeatCountUpdateMessageFragment1" | i18n }}
         {{ "passwordManager" | i18n }}
         {{ "smStandaloneTrialSeatCountUpdateMessageFragment2" | i18n }}
-        <a href="https://bitwarden.com/contact/" target="_blank" rel="noreferrer"
+        <!-- temp-comment: p26 -->
+        <!-- <a href="https://bitwarden.com/contact/" target="_blank" rel="noreferrer"
           >{{ "contactSupportShort" | i18n }}.
-        </a>
+        </a> -->
       </p>
       <p bitTypography="body1">{{ subscriptionDesc }}</p>
       <ng-container
@@ -225,14 +226,15 @@
     <h2 bitTypography="h2" class="tw-mt-7">{{ "selfHostingTitle" | i18n }}</h2>
     <p bitTypography="body1">
       {{ "selfHostingEnterpriseOrganizationSectionCopy" | i18n }}
-      <a
+      <!-- temp-comment: p26 -->
+      <!-- <a
         href="https://bitwarden.com/help/licensing-on-premise/#retrieve-organization-license"
         target="_blank"
         rel="noreferrer"
         appA11yTitle="{{ 'learnMore' | i18n }}"
       >
         <i class="bwi bwi-question-circle" aria-hidden="true"></i
-      ></a>
+      ></a> -->
     </p>
     <div class="tw-flex tw-space-x-2">
       <button
