--- a/apps/web/src/app/shared/components/account-fingerprint/account-fingerprint.component.html
+++ b/apps/web/src/app/shared/components/account-fingerprint/account-fingerprint.component.html
@@ -2,14 +2,15 @@
   <hr />
   <p *ngIf="fingerprint">
     {{ fingerprintLabel }}:
-    <a
+    <!-- temp-comment: p26 -->
+    <!-- <a
       href="https://bitwarden.com/help/fingerprint-phrase/"
       target="_blank"
       rel="noreferrer"
       appA11yTitle="{{ 'learnMore' | i18n }}"
     >
       <i class="bwi bwi-question-circle" aria-hidden="true"></i
-    ></a>
+    ></a> -->
     <br />
     <code class="tw-text-code">{{ fingerprint }}</code>
   </p>
