--- a/apps/web/src/app/tools/send/access.component.html
+++ b/apps/web/src/app/tools/send/access.component.html
@@ -9,13 +9,14 @@
     <div class="tw-w-full tw-text-center" *ngIf="creatorIdentifier != null">
       <p>{{ "sendAccessCreatorIdentifier" | i18n: creatorIdentifier }}</p>
     </div>
-    <bit-callout *ngIf="hideEmail" type="warning" title="{{ 'warning' | i18n }}">
+    <!-- temp-comment: p26 -->
+    <!-- <bit-callout *ngIf="hideEmail" type="warning" title="{{ 'warning' | i18n }}">
       {{ "viewSendHiddenEmailWarning" | i18n }}
       <a bitLink href="https://bitwarden.com/help/receive-send/" target="_blank" rel="noreferrer">{{
         "learnMore" | i18n
       }}</a
       >.
-    </bit-callout>
+    </bit-callout> -->
     <div
       class="tw-mt-3 tw-w-10/12 tw-rounded-md tw-border tw-border-solid tw-border-secondary-300 tw-bg-background tw-p-6"
     >
