--- a/apps/web/src/app/vault/individual-vault/add-edit.component.html
+++ b/apps/web/src/app/vault/individual-vault/add-edit.component.html
@@ -380,7 +380,8 @@
                   <label for="loginUriMatch{{ i }}">
                     {{ "matchDetection" | i18n }}
                   </label>
-                  <a
+                  <!-- temp-comment: p26 -->
+                  <!-- <a
                     class="ml-auto"
                     href="https://bitwarden.com/help/uri-match-detection/"
                     target="_blank"
@@ -388,7 +389,7 @@
                     appA11yTitle="{{ 'learnMore' | i18n }}"
                   >
                     <i class="bwi bwi-question-circle" aria-hidden="true"></i>
-                  </a>
+                  </a> -->
                 </div>
                 <div class="d-flex">
                   <select
@@ -950,14 +951,15 @@
             <label class="form-check-label" for="passwordPrompt">{{
               "passwordPrompt" | i18n
             }}</label>
-            <a
+            <!-- temp-comment: p26 -->
+            <!-- <a
               target="_blank"
               rel="noreferrer"
               appA11yTitle="{{ 'learnMore' | i18n }}"
               href="https://bitwarden.com/help/managing-items/#protect-individual-items"
             >
               <i class="bwi bwi-question-circle" aria-hidden="true"></i>
-            </a>
+            </a> -->
           </div>
         </ng-container>
       </div>
