--- a/apps/web/src/app/vault/individual-vault/attachments.component.html
+++ b/apps/web/src/app/vault/individual-vault/attachments.component.html
@@ -41,7 +41,8 @@
                 <div class="d-flex">
                   <a href="#" appStopClick (click)="download(a)">{{ a.fileName }}</a>
                   <div *ngIf="showFixOldAttachments(a)" class="ml-2">
-                    <a
+                    <!-- temp-comment: p26 -->
+                    <!-- <a
                       href="https://bitwarden.com/help/attachments/#fixing-old-attachments"
                       target="_blank"
                       rel="noreferrer"
@@ -52,7 +53,7 @@
                         aria-hidden="true"
                       ></i>
                       <span class="tw-sr-only">{{ "attachmentFixDescription" | i18n }}</span></a
-                    >
+                    > -->
                     <button
                       type="button"
                       class="btn btn-outline-primary btn-sm m-0 py-0 px-2"
