--- a/apps/web/src/app/vault/individual-vault/vault-filter/components/vault-filter.component.html
+++ b/apps/web/src/app/vault/individual-vault/vault-filter/components/vault-filter.component.html
@@ -5,7 +5,8 @@
   <div *ngIf="isLoaded">
     <div class="card-header d-flex">
       {{ "filters" | i18n }}
-      <a
+      <!-- temp-comment: p26 -->
+      <!-- <a
         class="ml-auto"
         href="https://bitwarden.com/help/searching-vault/"
         target="_blank"
@@ -13,7 +14,7 @@
         appA11yTitle="{{ 'learnMore' | i18n }}"
       >
         <i class="bwi bwi-question-circle" aria-hidden="true"></i>
-      </a>
+      </a> -->
     </div>
     <div class="card-body">
       <div class="tw-mb-4">
