style(theme): Make theme as SaviVault branding + Update logos

--- a/apps/web/src/scss/styles.scss
+++ b/apps/web/src/scss/styles.scss
@@ -120,7 +120,7 @@ app-security > app-two-factor-setup > form {
   width: 32px !important;
   height: 40px !important;
   display: block !important;
-  background-image: url(../images/icon-white.png) !important;
+  background-image: url(../images/logo.svg) !important;
   background-repeat: no-repeat;
   background-position-y: bottom;
 }
