--- a/libs/auth/src/angular/anon-layout/anon-layout.component.html
+++ b/libs/auth/src/angular/anon-layout/anon-layout.component.html
@@ -3,7 +3,7 @@
   [ngClass]="{ 'tw-pt-0': decreaseTopPadding, 'tw-pt-8': !decreaseTopPadding }"
 >
   <div class="tw-text-center">
-    <div class="tw-mx-auto tw-max-w-28 sm:tw-max-w-32">
+    <div class="tw-mx-auto">
       <bit-icon [icon]="icon"></bit-icon>
     </div>
 
