--- a/libs/components/src/navigation/nav-item.component.html
+++ b/libs/components/src/navigation/nav-item.component.html
@@ -62,6 +62,7 @@
           ></i
           ><span
             *ngIf="data.open"
+            class="tw-ms-4 tw-align-super"
             [ngClass]="showActiveStyles ? 'tw-font-bold' : 'tw-font-semibold'"
             >{{ text }}</span
           >
