--- a/libs/components/src/navigation/nav-logo.component.html
+++ b/libs/components/src/navigation/nav-logo.component.html
@@ -2,7 +2,7 @@
   class="tw-block tw-pt-2"
   [hideActiveStyles]="true"
   [route]="route"
-  [icon]="closedIcon"
+  [icon]="'bwi-shield'"
   [text]="label"
   *ngIf="sideNavService.open"
 ></bit-nav-item>
