--- a/libs/components/src/tw-theme.css
+++ b/libs/components/src/tw-theme.css
@@ -12,42 +12,42 @@
   --color-transparent-hover: rgb(0 0 0 / 0.03);
 
   --color-background: 255 255 255;
-  --color-background-alt: 251 251 251;
-  --color-background-alt2: 23 92 219;
-  --color-background-alt3: 33 37 41; /* bg of menu panel */
-  --color-background-alt4: 16 18 21; /* bg of active menu item */
+  --color-background-alt: 250 250 250;
+  --color-background-alt2: 123 23 217;
+  --color-background-alt3: 37 34 42; /* bg of menu panel */
+  --color-background-alt4: 18 15 20; /* bg of active menu item */
 
   /* Can only be used behind the extension refresh flag */
-  --color-primary-100: 200 217 249;
-  --color-primary-300: 108 117 125; /* hover of menu items */
+  --color-primary-100: 225 200 249;
+  --color-primary-300: 115 109 126; /* hover of menu items */
   /* Can only be used behind the extension refresh flag */
-  --color-primary-500: 23 93 220;
-  --color-primary-600: 18 82 163; /* color of links and buttons */
-  --color-primary-700: 13 60 119; /* hover of links and buttons */
+  --color-primary-500: 126 23 222;
+  --color-primary-600: 80 18 161; /* color of links and buttons */
+  --color-primary-700: 57 13 119; /* hover of links and buttons */
 
   --color-secondary-100: 240 240 240;
-  --color-secondary-300: 206 212 220;
-  --color-secondary-600: 137 146 159;
-  --color-secondary-700: 33 37 41;
+  --color-secondary-300: 213 207 221;
+  --color-secondary-600: 147 137 159;
+  --color-secondary-700: 37 34 42;
 
-  --color-success-600: 1 126 69;
-  --color-success-700: 0 85 46;
+  --color-success-600: 1 126 70;
+  --color-success-700: 0 87 46;
 
-  --color-danger-600: 200 53 34;
+  --color-danger-600: 201 53 34;
   --color-danger-700: 152 41 27;
 
   --color-warning-600: 139 102 9;
-  --color-warning-700: 105 77 5;
+  --color-warning-700: 107 78 5;
 
-  --color-info-600: 85 85 85;
+  --color-info-600: 84 84 84;
   --color-info-700: 59 58 58;
 
-  --color-text-main: 33 37 41;
-  --color-text-muted: 109 117 126;
+  --color-text-main: 37 34 42;
+  --color-text-muted: 116 109 126;
   --color-text-contrast: 255 255 255;
   --color-text-alt2: 255 255 255;
-  --color-text-code: 192 17 118;
-  --color-text-headers: 2 15 102;
+  --color-text-code: 192 17 119;
+  --color-text-headers: 15 2 100;
 
   --tw-ring-offset-color: #ffffff;
 }
@@ -59,121 +59,121 @@
 .theme_dark {
   --color-transparent-hover: rgb(255 255 255 / 0.12);
 
-  --color-background: 31 36 46;
-  --color-background-alt: 22 28 38;
-  --color-background-alt2: 47 52 61;
-  --color-background-alt3: 47 52 61;
-  --color-background-alt4: 16 18 21;
+  --color-background: 39 31 46;
+  --color-background-alt: 31 22 39;
+  --color-background-alt2: 54 47 61;
+  --color-background-alt3: 54 47 61;
+  --color-background-alt4: 18 15 20;
 
-  --color-primary-100: 8 31 73;
-  --color-primary-300: 23 93 220;
-  --color-primary-500: 54 117 232;
-  --color-primary-600: 106 153 240;
-  --color-primary-700: 180 204 249;
+  --color-primary-100: 42 8 73;
+  --color-primary-300: 126 23 222;
+  --color-primary-500: 146 54 231;
+  --color-primary-600: 176 106 240;
+  --color-primary-700: 215 180 249;
 
-  --color-secondary-100: 47 52 61;
-  --color-secondary-300: 110 118 137;
-  --color-secondary-600: 186 192 206;
+  --color-secondary-100: 54 47 61;
+  --color-secondary-300: 124 109 136;
+  --color-secondary-600: 198 186 206;
   --color-secondary-700: 255 255 255;
 
   --color-success-600: 82 224 124;
-  --color-success-700: 168 239 190;
+  --color-success-700: 169 239 191;
 
   --color-danger-600: 255 141 133;
-  --color-danger-700: 255 191 187;
+  --color-danger-700: 255 193 189;
 
   --color-warning-600: 255 235 102;
   --color-warning-700: 255 245 179;
 
-  --color-info-600: 164 176 198;
-  --color-info-700: 209 215 226;
+  --color-info-600: 182 164 198;
+  --color-info-700: 217 208 226;
 
   --color-text-main: 255 255 255;
-  --color-text-muted: 186 192 206;
-  --color-text-contrast: 25 30 38;
+  --color-text-muted: 198 186 206;
+  --color-text-contrast: 30 24 37;
   --color-text-alt2: 255 255 255;
-  --color-text-code: 240 141 199;
-  --color-text-headers: 226 227 228;
+  --color-text-code: 240 142 199;
+  --color-text-headers: 227 226 228;
 
-  --tw-ring-offset-color: #1f242e;
+  --tw-ring-offset-color: #271f2e;
 }
 
 .theme_nord {
   --color-transparent-hover: rgb(255 255 255 / 0.12);
 
-  --color-background: 67 76 94;
-  --color-background-alt: 59 66 82;
-  --color-background-alt2: 76 86 106;
-  --color-background-alt3: 76 86 106;
-  --color-background-alt4: 67 76 94;
+  --color-background: 83 68 95;
+  --color-background-alt: 73 60 83;
+  --color-background-alt2: 93 77 106;
+  --color-background-alt3: 93 77 106;
+  --color-background-alt4: 83 68 95;
 
-  --color-primary-300: 108 153 166;
-  --color-primary-600: 136 192 208;
-  --color-primary-700: 160 224 242;
+  --color-primary-300: 108 154 167;
+  --color-primary-600: 141 135 207;
+  --color-primary-700: 168 161 242;
 
-  --color-secondary-100: 76 86 106;
-  --color-secondary-300: 94 105 125;
-  --color-secondary-600: 216 222 233;
+  --color-secondary-100: 93 77 106;
+  --color-secondary-300: 110 94 125;
+  --color-secondary-600: 225 216 233;
   --color-secondary-700: 255 255 255;
 
-  --color-success-600: 163 190 140;
-  --color-success-700: 144 170 122;
+  --color-success-600: 164 191 141;
+  --color-success-700: 143 169 121;
 
   --color-danger-600: 228 129 139;
-  --color-danger-700: 191 97 106;
+  --color-danger-700: 190 96 105;
 
-  --color-warning-600: 235 203 139;
+  --color-warning-600: 235 202 137;
   --color-warning-700: 210 181 121;
 
-  --color-info-600: 129 161 193;
-  --color-info-700: 94 129 172;
+  --color-info-600: 152 129 193;
+  --color-info-700: 126 93 172;
 
-  --color-text-main: 229 233 240;
-  --color-text-muted: 216 222 233;
-  --color-text-contrast: 46 52 64;
+  --color-text-main: 235 229 240;
+  --color-text-muted: 225 216 233;
+  --color-text-contrast: 57 47 65;
   --color-text-alt2: 255 255 255;
-  --color-text-code: 219 177 211;
+  --color-text-code: 220 178 212;
 
-  --tw-ring-offset-color: #434c5e;
+  --tw-ring-offset-color: #53445f;
 }
 
 .theme_solarized {
   --color-transparent-hover: rgb(255 255 255 / 0.12);
 
-  --color-background: 0 43 54;
-  --color-background-alt: 7 54 66;
-  --color-background-alt2: 31 72 87;
-  --color-background-alt3: 31 72 87;
-  --color-background-alt4: 0 43 54;
+  --color-background: 4 0 56;
+  --color-background-alt: 11 7 65;
+  --color-background-alt2: 38 31 86;
+  --color-background-alt3: 38 31 86;
+  --color-background-alt4: 4 0 56;
 
-  --color-primary-300: 42 161 152;
-  --color-primary-600: 133 153 0;
-  --color-primary-700: 192 203 123;
+  --color-primary-300: 42 68 162;
+  --color-primary-600: 0 153 0;
+  --color-primary-700: 124 203 124;
 
-  --color-secondary-100: 31 72 87;
-  --color-secondary-300: 101 123 131;
-  --color-secondary-600: 131 148 150;
-  --color-secondary-700: 238 232 213;
+  --color-secondary-100: 38 31 86;
+  --color-secondary-300: 104 100 130;
+  --color-secondary-600: 131 132 149;
+  --color-secondary-700: 221 237 212;
 
-  --color-success-600: 133 153 0;
-  --color-success-700: 192 203 123;
+  --color-success-600: 0 153 0;
+  --color-success-700: 124 203 124;
 
-  --color-danger-600: 220 50 47;
-  --color-danger-700: 223 135 134;
+  --color-danger-600: 220 49 46;
+  --color-danger-700: 223 136 134;
 
-  --color-warning-600: 181 137 0;
-  --color-warning-700: 220 189 92;
+  --color-warning-600: 179 134 0;
+  --color-warning-700: 220 188 91;
 
-  --color-info-600: 133 153 0;
-  --color-info-700: 192 203 123;
+  --color-info-600: 0 153 0;
+  --color-info-700: 124 203 124;
 
-  --color-text-main: 253 246 227;
-  --color-text-muted: 147 161 161;
+  --color-text-main: 237 253 226;
+  --color-text-muted: 146 148 160;
   --color-text-contrast: 0 0 0;
   --color-text-alt2: 255 255 255;
-  --color-text-code: 240 141 199;
+  --color-text-code: 240 143 199;
 
-  --tw-ring-offset-color: #002b36;
+  --tw-ring-offset-color: #040038;
 }
 
 @import "./popover/popover.component.css";
