style(theme): Update more accent color as per SaviVault branding + Fix design issues cause by external link removal

--- a/apps/web/src/app/auth/settings/change-password.component.html
+++ b/apps/web/src/app/auth/settings/change-password.component.html
@@ -78,6 +78,7 @@
       <input
         class="form-check-input"
         type="checkbox"
+        bitCheckbox
         id="checkForBreaches"
         name="checkForBreaches"
         [(ngModel)]="checkForBreaches"
@@ -92,6 +93,7 @@
       <input
         class="form-check-input"
         type="checkbox"
+        bitCheckbox
         id="rotateUserKey"
         name="RotateUserKey"
         [(ngModel)]="rotateUserKey"
