--- a/apps/web/src/app/tools/generator.component.html
+++ b/apps/web/src/app/tools/generator.component.html
@@ -12,12 +12,19 @@
       ></bit-color-password>
     </div>
   </div>
-  <div class="form-group" role="radiogroup" aria-labelledby="typeHeading">
-    <label id="typeHeading" class="d-block">{{ "whatWouldYouLikeToGenerate" | i18n }}</label>
-    <div class="form-check form-check-inline" *ngFor="let o of typeOptions">
+  <div
+    class="form-group tw-flex tw-flex-row tw-flex-wrap tw-gap-x-20"
+    role="radiogroup"
+    aria-labelledby="typeHeading"
+  >
+    <label id="typeHeading" class="d-block tw-basis-full">{{
+      "whatWouldYouLikeToGenerate" | i18n
+    }}</label>
+    <div class="form-check" *ngFor="let o of typeOptions">
       <input
         class="form-check-input"
         type="radio"
+        bitRadio
         [(ngModel)]="type"
         name="Type"
         id="type_{{ o.value }}"
@@ -31,12 +38,19 @@
     </div>
   </div>
   <ng-container *ngIf="type === 'password'">
-    <div aria-labelledby="passwordTypeHeading" class="form-group" role="radiogroup">
-      <label id="passwordTypeHeading" class="d-block">{{ "passwordType" | i18n }}</label>
-      <div class="form-check form-check-inline" *ngFor="let o of passTypeOptions">
+    <div
+      aria-labelledby="passwordTypeHeading"
+      class="form-group tw-flex tw-flex-row tw-flex-wrap tw-gap-x-20"
+      role="radiogroup"
+    >
+      <label id="passwordTypeHeading" class="d-block tw-basis-full">{{
+        "passwordType" | i18n
+      }}</label>
+      <div class="form-check" *ngFor="let o of passTypeOptions">
         <input
           class="form-check-input"
           type="radio"
+          bitRadio
           [(ngModel)]="passwordOptions.type"
           name="PasswordType"
           id="passwordType_{{ o.value }}"
@@ -82,6 +96,7 @@
             id="capitalize"
             class="form-check-input"
             type="checkbox"
+            bitCheckbox
             (change)="savePasswordOptions()"
             [(ngModel)]="passwordOptions.capitalize"
             [disabled]="enforcedPasswordPolicyOptions?.capitalize"
@@ -93,6 +108,7 @@
             id="include-number"
             class="form-check-input"
             type="checkbox"
+            bitCheckbox
             (change)="savePasswordOptions()"
             [(ngModel)]="passwordOptions.includeNumber"
             [disabled]="enforcedPasswordPolicyOptions?.includeNumber"
@@ -168,6 +184,7 @@
             id="uppercase"
             class="form-check-input"
             type="checkbox"
+            bitCheckbox
             (change)="savePasswordOptions()"
             [(ngModel)]="passwordOptions.uppercase"
             [disabled]="enforcedPasswordPolicyOptions?.useUppercase"
@@ -180,6 +197,7 @@
             id="lowercase"
             class="form-check-input"
             type="checkbox"
+            bitCheckbox
             (change)="savePasswordOptions()"
             [(ngModel)]="passwordOptions.lowercase"
             [disabled]="enforcedPasswordPolicyOptions?.useLowercase"
@@ -192,6 +210,7 @@
             id="numbers"
             class="form-check-input"
             type="checkbox"
+            bitCheckbox
             (change)="savePasswordOptions()"
             [ngModel]="passwordOptions.number"
             (ngModelChange)="setPasswordOptionsNumber($event)"
@@ -205,6 +224,7 @@
             id="special"
             class="form-check-input"
             type="checkbox"
+            bitCheckbox
             [ngModel]="passwordOptions.special"
             (ngModelChange)="setPasswordOptionsSpecial($event)"
             [disabled]="enforcedPasswordPolicyOptions?.useSpecial"
@@ -217,6 +237,7 @@
             id="ambiguous"
             class="form-check-input"
             type="checkbox"
+            bitCheckbox
             (change)="savePasswordOptions()"
             [(ngModel)]="avoidAmbiguous"
           />
@@ -226,7 +247,7 @@
     </ng-container>
     <div class="d-flex">
       <div>
-        <button type="button" class="btn btn-primary" (click)="regenerate()">
+        <button type="button" bitButton bitFormButton buttonType="primary" (click)="regenerate()">
           {{ "regeneratePassword" | i18n }}
         </button>
         <button type="button" class="btn btn-outline-secondary" (click)="copy()">
@@ -252,10 +273,10 @@
         <!-- temp-comment: p26 -->
         <!-- <a
           class="ml-auto"
-          href="https://bitwarden.com/help/generator/#username-types"
           target="_blank"
           rel="noreferrer"
           appA11yTitle="{{ 'learnMore' | i18n }}"
+          href="https://bitwarden.com/help/generator/#username-types"
         >
           <i class="bwi bwi-question-circle" aria-hidden="true"></i>
         </a> -->
@@ -264,6 +285,7 @@
         <input
           class="form-check-input"
           type="radio"
+          bitRadio
           [(ngModel)]="usernameOptions.type"
           name="UsernameType"
           id="usernameType_{{ o.value }}"
@@ -440,6 +462,7 @@
             <input
               id="capitalizeUsername"
               type="checkbox"
+              bitCheckbox
               (change)="saveUsernameOptions()"
               [(ngModel)]="usernameOptions.wordCapitalize"
             />
@@ -451,6 +474,7 @@
             <input
               id="includeNumberUsername"
               type="checkbox"
+              bitCheckbox
               (change)="saveUsernameOptions()"
               [(ngModel)]="usernameOptions.wordIncludeNumber"
             />
