--- a/apps/web/src/app/vault/individual-vault/share.component.html
+++ b/apps/web/src/app/vault/individual-vault/share.component.html
@@ -56,6 +56,7 @@
                 <td class="table-list-checkbox">
                   <input
                     type="checkbox"
+                    bitCheckbox
                     [(ngModel)]="c.checked"
                     name="Collection[{{ i }}].Checked"
                     appStopProp
