style(theme): Update SSO page icon styling + Update nav bg color

--- a/libs/components/src/variables.scss
+++ b/libs/components/src/variables.scss
@@ -211,7 +211,7 @@ $themes: (
     tableLinkColor: $primary,
     tableLinkColorHover: #561098,
     tableRowHover: rgba(0, 0, 0, 0.03),
-    tableSeparator: #dee2e6,
+    tableSeparator: #e2dfe7,
     textColor: $body-color,
     textDangerColor: $white,
     textInfoColor: $white,
@@ -310,7 +310,7 @@ $themes: (
     navActiveWeight: 600,
     navBackground: $darkDarkBlue1,
     navBackgroundAlt: $darkDarkBlue1,
-    navOrgBackgroundColor: #161c26,
+    navOrgBackgroundColor: #1f1627,
     navWeight: 400,
     pwLetter: $white,
     pwNumber: #52bdfb,
