--- a/libs/importer/src/components/import.component.html
+++ b/libs/importer/src/components/import.component.html
@@ -317,7 +317,7 @@
         </ng-container>
         <ng-container *ngIf="format === 'fsecurefsk'">
           Open the F-Secure KEY desktop application and navigate to "Settings" &rarr; "Export
-          Passwords". Select the "Export" button, enter your master password, and save the FSK file.
+          Passwords". Select the "Export" button, enter your master pin, and save the FSK file.
         </ng-container>
         <ng-container *ngIf="format === 'kasperskytxt'">
           Open the Kaspersky Password Manager desktop application and navigate to "Settings" &rarr;
@@ -326,7 +326,7 @@
         </ng-container>
         <ng-container *ngIf="format === 'remembearcsv'">
           Open the RememBear desktop application and navigate to "Settings" &rarr; "Account" &rarr;
-          "Export". Enter your master password and select the "Export Anyway" button to save the CSV
+          "Export". Enter your master pin and select the "Export Anyway" button to save the CSV
           file.
         </ng-container>
         <ng-container *ngIf="format === 'passwordwallettxt'">
